feat : change computeRbac